# xlogic

./: README.md  aoi_base.cpp  aoi_base.h  aoi_orthogonal_linked_list.cpp  aoi_orthogonal_linked_list.h  test_aol.cpp
aoi/: CMakeLists.txt  aoi_base.h  aoi_orthogonal_linked_list.cpp  aoi_orthogonal_linked_list.h
gs/: .gitignore  CMakeLists.txt  CMakelists.txt  build.sh
gs/mysql_script/: game_db.sql
gs/protocol/: common_enum.proto  common_types.proto  error_code.proto  game_cmd.proto  game_message.proto  server_message.proto
gs/src/: CMakeLists.txt  guest.h  listener.h  server.cpp  server.h  server_message.cpp  server_message.h
gs/src/common/: CMakeLists.txt  app_looper.cpp  app_looper.h  app_utility.cpp  app_utility.h  backtrace_info.cpp  backtrace_info.h  db_opr_base.cpp  db_opr_base.h  get_opt.h  log4z.cpp  log4z.h  logger_manager.cpp  logger_manager.h  noncopyable.h  signal_handler.cpp  signal_handler.h  type_def.h  uid_factory.cpp  uid_factory.h
gs/src/mytest/: CMakeLists.txt  main.cpp
gs/src/network/: CMakeLists.txt  agent.cpp  agent.h  connector.cpp  connector.h  inner_listener.cpp  inner_listener.h  isocket.h  listener.cpp  listener.h  message_parser.h  message_processor.cpp  message_processor.h  message_subscription.cpp  message_subscription.h  network.h  poller.cpp  poller.h  server_message.cpp  server_message.h  socket_message.cpp  socket_message.h  socket_message_queue.cpp  socket_message_queue.h
gs/src/robot_client/: CMakeLists.txt  main.cpp
gs/src/server_conn/: CMakeLists.txt  agent_manager.cpp  agent_manager.h  client_agent.cpp  client_agent.h  client_handler.cpp  client_handler.h  conn_agent.h  game_connector_handler.cpp  game_connector_handler.h  game_handler.cpp  game_handler.h  game_looper.cpp  game_looper.h  inner_handler.cpp  inner_handler.h  login_connector_handler.cpp  login_connector_handler.h  login_handler.cpp  login_handler.h  main.cpp  message_sender.h  server.cpp  server.h
gs/src/server_db/: CMakeLists.txt  game_listener_handler.cpp  game_listener_handler.h  game_looper.cpp  game_looper.h  mysql_connection.cpp  mysql_connection.h  server.cpp  server.h
gs/src/server_game/: CMakeLists.txt  conn_connector_handler.cpp  conn_connector_handler.h  conn_listener_handler.cpp  conn_listener_handler.h  db_connector_handler.cpp  db_connector_handler.h  game_looper.h  handle_register.cpp  handle_register.h  main.cpp  player.h  player_manager.cpp  server.cpp  server.h  session_manager.h
gs/src/server_game/cmd_handles/: login_handle.h
gs/src/server_game/player/: player.cpp  player.h  player_manager.cpp  player_manager.h
gs/src/server_login/: CMakeLists.txt
gs/src/server_war/: CMakeLists.txt
gs/src/service/: network_service.h  service.h  work_dispatcher.h
gs/src/service_conn/: CMakeLists.txt  main.cpp  message_subscription.cpp  message_subscription.h  server.h
gs/src/test/: CMakeLists.txt  main.cpp
gs/tools/: .gitignore  CMakeLists.txt  build_tools.sh  export_sql_source.sh
gs/tools/sql2cpp/: CMakeLists.txt  main.cpp
gs/tools/sql2game/: CMakeLists.txt  main.cpp
